# Python-SmartSpectra-API

./: .gitignore  CMakeLists.txt  README.md  build.sh  dotenv.h  hello_vitals.cpp  main.py  package-lock.json  server.py  setup.sh  vid2.mov
data/: input.json  output.json
